<resources>
  <string name="maubis_apps" translatable="false">Maubis Apps</string>
  <string name="timestamp" translatable="false">dd month yyyy, hh:mm aa</string>
  <string name="title">Title</string>
  <string name="description">Content</string>
  <string name="save">Save</string>
  <string name="import_to_app">Import</string>
  <string name="search_notes">Search Notes&#8230;</string>
  <string name="share_using">Share using&#8230;</string>
  <string name="main_no_notes">No Notes</string>
  <string name="main_no_notes_hint">It seems you have not added any notes. Click to add a note.</string>
  <string name="shortcut_add_note">Add Note</string>
  <string name="shortcut_add_list">Add Checklist</string>
  <string name="edit_note">Edit Note</string>
  <string name="open_in_notification">Create Notification</string>
  <string name="share_images" translatable="false">Share Photos</string>
  <string name="open_in_popup">Open In Popup</string>
  <string name="delete_note_permanently">Delete Permanently</string>
  <string name="copy_note">Copy Note</string>
  <string name="send_note">Send Note</string>
  <string name="unarchive_note">Unarchive Note</string>
  <string name="archive_note">Archive Note</string>
  <string name="not_favourite_note">Mark Not Favourite</string>
  <string name="favourite_note">Mark Favourite</string>
  <string name="restore_note">Restore Note</string>
  <string name="trash_note">Move to Trash</string>
  <string name="choose_note_color">Change Color</string>
  <string name="lock_note">Lock Note</string>
  <string name="change_tags">Change Tags</string>
  <string name="unlock_note">Unlock Note</string>
  <string name="reminder">Reminder</string>
  <string name="pin_to_launcher" translatable="false">Launcher Shortcut</string>
  <string name="select">Select</string>
  <string name="duplicate">Duplicate</string>
  <string name="pin_note">Pin Note</string>
  <string name="unpin_note">Unpin Note</string>
  <string name="view_distraction_free">Distraction Free</string>
  <string name="merge_notes">Merge Notes</string>
  <string name="choose_action">Choose Action&#8230;</string>
  <string name="tap_for_action_edit">Tap to open note for editing</string>
  <string name="tap_for_action_copy">Tap to copy note content to clipboard</string>
  <string name="tap_for_action_share">Tap to share note content to other apps</string>
  <string name="tap_for_action_popup">Tap to open note in floating popup</string>
  <string name="tap_for_action_delete">Tap to delete the note</string>
  <string name="tap_for_action_trash">Tap to move note to trash</string>
  <string name="tap_for_action_not_trash">Tap to move note out of trash</string>
  <string name="tap_for_action_favourite">Tap to mark note as favourite</string>
  <string name="tap_for_action_not_favourite">Tap to mark note not as favourite</string>
  <string name="tap_for_action_archive">Tap to archive the note</string>
  <string name="tap_for_action_color">Tap to change the background colour of the note</string>
  <string name="tap_for_action_not_archive">Tap to unarchive the note</string>
  <string name="nav_home">Home</string>
  <string name="nav_favourites">Favourites</string>
  <string name="nav_archived">Archived</string>
  <string name="nav_locked">Locked</string>
  <string name="nav_trash">Trash</string>
  <string name="format_hint_text">Add Content&#8230;</string>
  <string name="format_hint_heading">Add Heading&#8230;</string>
  <string name="format_hint_quote">Add Quoted Text&#8230;</string>
  <string name="format_hint_list">Add Item&#8230;</string>
  <string name="format_hint_code">Add Code&#8230;</string>
  <string name="format_hint_image">Click to add or change image</string>
  <string name="home_option_sheet_title">Options and Settings</string>
  <string name="home_option_ui_experience">Interface and Experience</string>
  <string name="home_option_ui_experience_subtitle">Choose how the app looks and feels.</string>
  <string name="home_option_about">About</string>
  <string name="home_option_about_subtitle">Know more about us and the app.</string>
  <string name="home_option_security">Security</string>
  <string name="home_option_security_subtitle">Locking notes and security options</string>
  <string name="home_option_enable_list_view">Enable List Layout</string>
  <string name="home_option_enable_list_view_subtitle">Show notes in a single column</string>
  <string name="home_option_enable_grid_view">Enable Grid Layout</string>
  <string name="home_option_enable_grid_view_subtitle">Show notes in a staggered grid</string>
  <string name="home_option_order_notes">Order Notes</string>
  <string name="home_option_backup_options">Backup and Import</string>
  <string name="home_option_backup_options_subtitle">Backup, import and export note options</string>
  <string name="home_option_export">Export Notes</string>
  <string name="home_option_export_subtitle">Export notes to device storage to share</string>
  <string name="home_option_import">Import Notes</string>
  <string name="home_option_import_subtitle">Import notes from the device storage</string>
  <string name="home_option_export_markdown">Export As Markdown</string>
  <string name="home_option_export_markdown_subtitle">Export notes in markdown format. (You cannot import these back to the app)</string>
  <string name="home_option_auto_export">Export Automatically</string>
  <string name="home_option_auto_export_subtitle">Export notes frequently to external file as backup</string>
  <string name="home_option_about_page">About Us</string>
  <string name="home_option_about_page_subtitle">Know more about the app and the developers</string>
  <string name="home_option_open_source_page">Open Source Project</string>
  <string name="home_option_open_source_page_subtitle">Know more about the open source project</string>
  <string name="home_option_rate_and_review">Rate and Review</string>
  <string name="home_option_rate_and_review_subtitle">Tell us how much you liked the app</string>
  <string name="home_option_install_pro_app">Install Pro App</string>
  <string name="home_option_install_pro_app_details">Install the Pro App to unlock features and support developer</string>
  <string name="home_option_migrate_to_pro">Migrate Notes to Scarlet Pro</string>
  <string name="home_option_migrate_to_pro_details">Migrate all your notes to the pro app</string>
  <string name="home_option_delete_notes_and_more">Delete Notes and More</string>
  <string name="home_option_delete_notes_and_more_details">Delete notes, tags and other data in the app</string>
  <string name="home_option_delete_all_notes">Delete All Notes</string>
  <string name="home_option_delete_all_notes_details">Delete all the notes in the app</string>
  <string name="home_option_delete_all_folders">Delete All Folders</string>
  <string name="home_option_delete_all_folders_details">Delete all the folders in the app</string>
  <string name="home_option_delete_all_tags">Delete All Tags</string>
  <string name="home_option_delete_all_tags_details">Delete all the tags in the app</string>
  <string name="home_option_delete_everything">Delete Everything</string>
  <string name="home_option_delete_everything_details">Delete notes, tags and folders in the app</string>
  <string name="ui_options_note_background_color">Note Viewer Background</string>
  <string name="ui_options_note_background_color_settings_theme">Use theme color for background</string>
  <string name="ui_options_note_background_color_settings_note">Use note color for background</string>
  <string name="security_option_title">Security Options</string>
  <string name="security_option_set_pin_code">Pass Code</string>
  <string name="security_option_set_pin_code_subtitle">Set a 4 digit PIN to lock notes</string>
  <string name="security_option_lock_app" translatable="false">Enable App Lock</string>
  <string name="security_option_lock_app_details" translatable="false">Use PIN to unlock the whole application</string>
  <string name="security_option_ask_pin_always" translatable="false">Always ask for PIN</string>
  <string name="security_option_ask_pin_always_details" translatable="false">Enter PIN for all notes, even if previously entered</string>
  <string name="security_option_biometrics_enabled" translatable="false">Unlock with Biometrics</string>
  <string name="security_option_biometrics_enabled_subtitle" translatable="false">Allow unlock with a fingerprint or other biometrics</string>
  <string name="security_option_biometrics_disabled" translatable="false">Biometrics disabled</string>
  <string name="security_option_biometrics_disabled_subtitle" translatable="false">Do not allow unlock with a fingerprint or other biometrics</string>
  <string name="biometric_prompt_unlock_note" translatable="false">Unlock Note</string>
  <string name="biometric_prompt_unlock_note_details" translatable="false">Use device fingerprint or biometrics to unlock the note and access.</string>
  <string name="biometric_prompt_unlock_app" translatable="false">Unlock App</string>
  <string name="biometric_prompt_unlock_app_details" translatable="false">Use device fingerprint or biometrics to unlock the app and access all notes.</string>
  <string name="security_sheet_button_remove">Remove</string>
  <string name="markdown_sheet_markdown_support">Markdown Support</string>
  <string name="markdown_sheet_markdown_support_subtitle">Allow markdown supported formatting</string>
  <string name="markdown_sheet_home_markdown_support">Markdown in Note List</string>
  <string name="markdown_sheet_home_markdown_support_subtitle">Enable Markdown formatting in the list of notes</string>
  <string name="markdown_sheet_examples_list" translatable="false"># Heading \n## Subheading \n\n```\nblock of code\n```\n\n> quote\n\n- **bold**\n- *italics*\n- _underline_\n- ~~strike~~\n- `code`\n</string>
  <string name="permission_layout_give_permission">Give Permissions</string>
  <string name="permission_layout_give_permission_details">Import and export require storage permissions. Please give the permission when requested.</string>
  <string name="permission_layout_give_permission_ok">Allow</string>
  <string name="import_export_layout_exporting_done">Done</string>
  <string name="import_export_layout_folder_sync_title">Folder Sync</string>
  <string name="import_export_layout_folder_sync_description">Sync all your notes, tags and folders to an external folder. This helps you sync using other apps between devices, as well have a copy in case you need to delete the app.</string>
  <string name="import_export_layout_folder_sync_folder">Exporting to Folder</string>
  <string name="import_export_layout_filename" translatable="false">MaterialNotes/BACKUP.txt</string>
  <string name="about_page_rate">Rate on Play Store</string>
  <string name="about_page_app_version">App Version</string>
  <string name="about_page_about_app">About App</string>
  <string name="about_page_description">
    %s is a simple note taking app. It allows quick Rich Text input without making the experience very difficult to use. It makes multi-tasking a breeze.
  </string>
  <string name="about_page_about_us_details">Hi, we are a pair of designer and programmer, who created %s .
    We endeavour to build beautiful, carefully designed free, ad-free or minimal ads apps which serve great utility to everyone!</string>
  <string name="install_pro_app">Install Pro App</string>
  <string name="available_in_pro_only">Available on Scarlet Pro</string>
  <string name="why_install_pro">Why Install Pro</string>
  <string name="why_install_pro_details">
     &#10004; Support developer for the massive server costs, to run the cloud sync \n\n&#10004; Get the latest features first \n\n&#10004; Some extra features will be available only to Pro users
  </string>
  <string name="folder_sheet_add_note">Create New Notebook</string>
  <string name="folder_sheet_add_note_detail">Add Notebook</string>
</resources>