<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
  android:id="@+id/root_layout"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/spacing_xsmall">

    <android.support.v7.widget.CardView
      android:id="@+id/about_us_card"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/spacing_xsmall"
      app:cardCornerRadius="@dimen/spacing_xxsmall">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_small">

        <TextView
          android:id="@+id/about_us_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/spacing_xsmall"
          android:text="@string/home_option_about_page"
          android:textColor="@color/material_blue_grey_500"
          android:textSize="@dimen/font_size_normal" />

        <TextView
          android:id="@+id/about_us"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/spacing_xsmall"
          android:text="@string/about_page_about_us_details"
          android:textColor="@color/dark_tertiary_text"
          android:textSize="@dimen/font_size_normal" />

      </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
      android:id="@+id/about_app_card"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/spacing_xsmall"
      app:cardCornerRadius="@dimen/spacing_xxsmall">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_small">

        <TextView
          android:id="@+id/about_app_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/spacing_xsmall"
          android:text="@string/about_page_about_app"
          android:textColor="@color/material_blue_grey_500"
          android:textSize="@dimen/font_size_normal" />

        <TextView
          android:id="@+id/about_app"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/spacing_xsmall"
          android:text="@string/about_page_description"
          android:textColor="@color/dark_tertiary_text"
          android:textSize="@dimen/font_size_normal" />
      </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:id="@+id/app_version_card"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/spacing_xsmall"
      app:cardCornerRadius="@dimen/spacing_xxsmall">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_small">

        <TextView
          android:id="@+id/app_version_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/spacing_xsmall"
          android:text="@string/about_page_app_version"
          android:textColor="@color/material_blue_grey_500"
          android:textSize="@dimen/font_size_small" />

        <TextView
          android:id="@+id/app_version"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/spacing_xsmall"
          android:textColor="@color/dark_tertiary_text"
          android:textSize="@dimen/font_size_normal" />

      </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/spacing_xsmall"
      app:cardBackgroundColor="@color/material_red_800"
      app:cardCornerRadius="@dimen/spacing_xxsmall">

      <LinearLayout
        android:id="@+id/results_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_xsmall">

        <TextView
          android:id="@+id/rate_us"
          style="@style/BorderedBackgroundView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:padding="@dimen/spacing_xsmall"
          android:text="@string/about_page_rate"
          android:textAllCaps="true"
          android:textColor="@color/light_primary_text"
          android:textSize="@dimen/font_size_small" />
      </LinearLayout>
    </android.support.v7.widget.CardView>
  </LinearLayout>
</android.support.v4.widget.NestedScrollView>