<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/root_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:id="@+id/container_layout"
    style="@style/BottomSheetCardContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
      android:id="@+id/title_card"
      style="@style/BottomSheetCardView">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_small">

        <TextView
          android:id="@+id/folder_sync_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/spacing_xsmall"
          android:text="@string/import_export_layout_folder_sync_title"
          android:textColor="@color/dark_tertiary_text"
          android:textSize="@dimen/font_size_large" />

        <TextView
          android:id="@+id/folder_sync_description"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/spacing_xsmall"
          android:text="@string/import_export_layout_folder_sync_description"
          android:textColor="@color/dark_hint_text"
          android:textSize="@dimen/font_size_normal" />
      </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
      android:id="@+id/export_card"
      style="@style/BottomSheetCardView">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_small">

        <TextView
          android:id="@+id/folder_sync_path_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/spacing_xxsmall"
          android:text="@string/import_export_layout_folder_sync_folder"
          android:textColor="@color/dark_tertiary_text"
          android:textSize="@dimen/font_size_large" />

        <EditText
          android:id="@+id/folder_sync_path"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/spacing_xsmall"
          android:layout_marginBottom="@dimen/spacing_xsmall"
          android:background="@color/transparent"
          android:paddingTop="@dimen/spacing_xsmall"
          android:paddingBottom="@dimen/spacing_xsmall"
          android:text="@string/import_export_layout_filename"
          android:textColor="@color/dark_hint_text"
          android:textSize="@dimen/font_size_normal" />

      </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:id="@+id/options_card_layout"
      style="@style/BottomSheetCardView">

      <LinearLayout
        android:id="@+id/options_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:id="@+id/enable_disable_card"
      style="@style/BottomSheetCardView"
      app:cardBackgroundColor="@color/material_red_800">

      <LinearLayout
        android:id="@+id/results_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_xsmall">

        <TextView
          android:id="@+id/folder_sync_enabled"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:padding="@dimen/spacing_xsmall"
          android:text="@string/import_export_layout_exporting_done"
          android:textAllCaps="true"
          android:textColor="@color/light_primary_text"
          android:textSize="@dimen/font_size_small" />
      </LinearLayout>
    </android.support.v7.widget.CardView>
  </LinearLayout>
</android.support.v4.widget.NestedScrollView>