<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ui="http://schemas.android.com/apk/res-auto"
  android:id="@+id/root_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:id="@+id/container_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    style="@style/BottomSheetCardContainer">

    <android.support.v7.widget.CardView
      android:id="@+id/markdown_card"
      style="@style/BottomSheetCardView">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.github.bijoysingh.uibasics.views.UIActionView
          android:id="@+id/action_button"
          style="@style/BorderedBackgroundView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:padding="@dimen/spacing_normal"
          ui:actionSize="@dimen/icon_size_normal"
          ui:actionTint="@color/material_blue_400"
          ui:icon="@drawable/ic_markdown_logo"
          ui:iconSize="@dimen/icon_size_normal"
          ui:iconTextGap="@dimen/spacing_normal"
          ui:iconTint="@color/dark_tertiary_text"
          ui:subtitle="@string/markdown_sheet_markdown_support_subtitle"
          ui:subtitleColor="@color/dark_tertiary_text"
          ui:subtitleSize="@dimen/font_size_small"
          ui:subtitleStyle="@style/FontText"
          ui:title="@string/markdown_sheet_markdown_support"
          ui:titleColor="@color/dark_secondary_text"
          ui:titleSize="@dimen/font_size_normal"
          ui:titleStyle="@style/FontText" />

        <com.github.bijoysingh.uibasics.views.UIActionView
          android:id="@+id/markdown_home_button"
          style="@style/BorderedBackgroundView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:padding="@dimen/spacing_normal"
          ui:actionSize="@dimen/icon_size_normal"
          ui:actionTint="@color/material_blue_400"
          ui:icon="@drawable/ic_action_grid"
          ui:iconSize="@dimen/icon_size_normal"
          ui:iconTextGap="@dimen/spacing_normal"
          ui:iconTint="@color/dark_tertiary_text"
          ui:subtitle="@string/markdown_sheet_home_markdown_support_subtitle"
          ui:subtitleColor="@color/dark_tertiary_text"
          ui:subtitleSize="@dimen/font_size_small"
          ui:subtitleStyle="@style/FontText"
          ui:title="@string/markdown_sheet_home_markdown_support"
          ui:titleColor="@color/dark_secondary_text"
          ui:titleSize="@dimen/font_size_normal"
          ui:titleStyle="@style/FontText" />
      </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:id="@+id/markdown_example_card"
      style="@style/BottomSheetCardView">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_small">

        <TextView
          android:id="@+id/examples_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/markdown_sheet_examples"
          android:textColor="@color/material_blue_grey_500"
          android:textSize="@dimen/font_size_normal" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <TextView
            android:id="@+id/source_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/spacing_xsmall"
            android:text="@string/markdown_sheet_examples_list"
            android:textSize="@dimen/font_size_normal" />

          <TextView
            android:id="@+id/markdown_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/spacing_xsmall"
            android:text="@string/markdown_sheet_examples_list"
            android:textSize="@dimen/font_size_normal" />
        </LinearLayout>
      </LinearLayout>
    </android.support.v7.widget.CardView>
  </LinearLayout>
</android.support.v4.widget.NestedScrollView>