<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ui="http://schemas.android.com/apk/res-auto"
  android:id="@+id/root_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:id="@+id/container_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/spacing_xxsmall">

    <android.support.v7.widget.CardView
      android:id="@+id/permission_card"
      style="@style/BottomSheetCardView">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_normal">

        <TextView
          android:id="@+id/permissions_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/spacing_xsmall"
          android:text="@string/permission_layout_give_permission"
          android:textColor="@color/dark_tertiary_text"
          android:textSize="@dimen/font_size_large" />

        <TextView
          android:id="@+id/permissions_details"
          style="@style/SanSerif"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/spacing_xsmall"
          android:text="@string/permission_layout_give_permission_details"
          android:textColor="@color/dark_tertiary_text"
          android:textSize="@dimen/font_size_small" />
      </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      style="@style/BottomSheetCardView"
      ui:cardBackgroundColor="@color/material_red_800">

      <TextView
        android:id="@+id/give_permissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/spacing_normal"
        android:text="@string/permission_layout_give_permission_ok"
        android:textAllCaps="true"
        android:textColor="@color/light_primary_text"
        android:textSize="@dimen/font_size_small" />
    </android.support.v7.widget.CardView>
  </LinearLayout>
</android.support.v4.widget.NestedScrollView>